--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,25 +1,46 @@
-name: Pylint
-
+name: tests
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint
-    - name: Docker
-      run: |
-        docker compose build
-        docker compose up
+
+  postgres-build:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - "5432:5432"
+        env:
+          POSTGRES_DB: inn_time
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: inn_time_db_password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      POSTGRES_DB: inn_time
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: inn_time_db_password
+      RAILS_ENV: test
+      DATABASE_URL: "postgresql://postgres:inn_time_db_password@localhost:5432/inn_time"
+  tests:
+    needs: postgres-build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Test with pytest
+      run: pytest
+  
