--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
   tests:
+    needs: build
     services:
       postgres:
         image: postgres:latest
