--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: tests
 on: [push]
 
 jobs:
-  test:
+  tests:
     services:
       postgres:
         image: postgres:latest
@@ -23,6 +23,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Flask db upgrade
+      run: |
+        flask db upgrade
     - name: Test with pytest
       run: |
         python -m pytest
